# img2hack

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  images.qrc  img2hack.pro  main.cpp
.circleci/: config.yml
.github/workflows/: ci.yaml  coverage.yaml  github-actions-demo.yml  github-actions.yml
app/: CMakeLists.txt
app-qtquick/: BinaryImage.cpp  BinaryImage.h  CMakeLists.txt  DrawingCanvas.cpp  DrawingCanvas.h  main.cpp  main.qml
app-qtquick/resources/qml/: main.qml
app-qtquick/src/: main.cpp
app-qtwidget/: CMakeLists.txt
app-qtwidget/src/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  images.qrc  main.cpp
app/src/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  MainWindow.cpp  MainWindow.hpp  main.cpp
ci/: travis-before-install.sh  travis-script.sh  travis-system-info.sh
core/: CMakeLists.txt
core/include/core/: Bitmap.h  BitmapToAssembly.h  Hack.h  ImageToBitmap.h  ScreenMap.hpp  Writer.hpp
core/src/: Bitmap.cpp  BitmapToAssembly.cpp  ImageToBitmap.cpp  ScreenMap.cpp  Writer.cpp
core/tests/: BitmapToAssembly.test.cpp  CMakeLists.txt  ImageToBitmap.test.cpp  ScreenMap.test.cpp
model/: CMakeLists.txt  hack.h  screenmap.cpp  screenmap.h  writer.cpp  writer.h
model/include/model/: Hack.hpp  ScreenMap.hpp  Writer.hpp
model/src/: ScreenMap.cpp  Writer.cpp
model/tests/: CMakeLists.txt  ScreenMap.test.cpp
view/: aboutdialog.cpp  aboutdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
